# cargo-basic-template

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cargo-generate.toml
examples/: example.rs
src/: lib.rs  main.rs
tests/: main.rs
