[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2018"
authors = ["{{authors}}"]
description = "A brief description"
readme = "README.md"
repository = "https://github.com/{{gituser}}/{{project-name}}"
homepage = "https://github.com/{{gituser}}/{{project-name}}"
license = "MIT OR Apache-2.0"
keywords = ["Some", "key", "words"]
categories = ["Some", "Categories"]

[dependencies]


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
